src/packaged/trigger-framework/default/objects/TriggerFeatureControl__mdt/TriggerFeatureControl__mdt.object-meta.xml
<CustomObject>
    <description>Registers a feature for execution in trigger contexts (before insert, after insert, etc). Only active controls are executed.</description>
    <label>Trigger Feature Control</label>
    <pluralLabel>Trigger Feature Controls</pluralLabel>
</CustomObject>