src/packaged/trigger-framework/default/objects/TriggerFeatureControl__mdt/fields/Handler__c.field-meta.xml
<CustomField>
    <fullName>Handler__c</fullName>
    <description>The exact class name of the handler that implements the TriggerExecutable interface. Set the fully qualified name, if a subclass implements the interface.</description>
    <inlineHelpText>Set the apex class name of the handler that will run in the specified contexts.</inlineHelpText>
    <label>Handler</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>