src/packaged/trigger-framework/default/objects/TriggerFeatureControl__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The order of execution for this specific handler. Higher numbers are executed later in a transaction.</description>
    <inlineHelpText>Higher priorities are executed later during a transaction. If two handlers have the same priority, their order of execution is random.</inlineHelpText>
    <label>Priority</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>