src/packaged/trigger-framework/default/objects/TriggerFeatureControl__mdt/fields/RunOnAfterDelete__c.field-meta.xml
<CustomField>
    <fullName>RunOnAfterDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Runs this handler in &quot;after delete&quot; context.</description>
    <inlineHelpText>Runs the handler in &quot;after delete&quot; context.</inlineHelpText>
    <label>After Delete</label>
    <type>Checkbox</type>
</CustomField>