src/packaged/trigger-framework/default/objects/TriggerFeatureControl__mdt/fields/RunOnAfterUndelete__c.field-meta.xml
<CustomField>
    <fullName>RunOnAfterUndelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Runs this handler in &quot;after undelete&quot; context.</description>
    <inlineHelpText>Runs the handler in &quot;after undelete&quot; context.</inlineHelpText>
    <label>After Undelete</label>
    <type>Checkbox</type>
</CustomField>