src/packaged/trigger-framework/default/objects/TriggerFeatureControl__mdt/fields/RunOnAfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>RunOnAfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Runs this handler in &quot;after update&quot; context.</description>
    <inlineHelpText>Runs the handler in &quot;after update&quot; context.</inlineHelpText>
    <label>After Update</label>
    <type>Checkbox</type>
</CustomField>