src/packaged/trigger-framework/default/objects/TriggerFeatureControl__mdt/fields/RunOnBeforeDelete__c.field-meta.xml
<CustomField>
    <fullName>RunOnBeforeDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Runs this handler in &quot;before delete&quot; context.</description>
    <inlineHelpText>Runs the handler in &quot;before delete&quot; context.</inlineHelpText>
    <label>Before Delete</label>
    <type>Checkbox</type>
</CustomField>