src/packaged/trigger-framework/default/objects/TriggerFeatureControl__mdt/fields/RunOnBeforeInsert__c.field-meta.xml
<CustomField>
    <fullName>RunOnBeforeInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Runs this handler in &quot;before insert&quot; context.</description>
    <inlineHelpText>Runs the handler in &quot;before insert&quot; context.</inlineHelpText>
    <label>Before Insert</label>
    <type>Checkbox</type>
</CustomField>