src/packaged/trigger-framework/default/objects/TriggerFeatureControl__mdt/fields/SObjectName__c.field-meta.xml
<CustomField>
    <fullName>SObjectName__c</fullName>
    <description>The developer name of the SObject for this control. We do not use a Metadata Relationship for performance reasons (30 ms vs 600 ms loading times).</description>
    <inlineHelpText>Set the SObject where the handler is executed. The SObject must implement a trigger that calls the framework.</inlineHelpText>
    <label>SObject Name</label>
    <length>43</length>
    <required>true</required>
    <type>Text</type>
</CustomField>